# mobo2a

./: CMakeLists.txt  MovingAverage.hpp  README.md  base_includes.txt  main.cpp  toolchain.txt
GUI/: App.cpp  App.hpp  EventHandler.cpp  EventHandler.hpp  Renderer.cpp  Renderer.hpp  Win.cpp  Win.hpp
Math/: CMakeLists.txt  MovingAverage.cpp
